added : first scene to the renderer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Basic scene</title>
 </head>
 <body>
+    <canvas class="webgl"></canvas>
+    <!-- download three-js library from official website and extract it -->
+    <!-- from build folder copy three.min.js file and copy in our project folder -->
+    <!-- added three-js library using script tag  -->
+    <!-- add above all script tag so that we can use the library in our scripts -->
+    <!-- Now we have access to "THREE" variable in our script  -->
+    <!-- THREE variable contains all the classes and properties -->
+    <script src="./three.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
